<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/set_attendance"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/set_couples_attendance" />
        <item
            android:id="@+id/set_reason_for_missing"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/set_reason_for_missing" />
        <item
            android:id="@+id/report_attendance"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/report_attendance" />

    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/setting_group"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/setting_group"
                android:visible="false" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
