<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_reason"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/paddingForCardVertical"
        android:paddingTop="@dimen/paddingForCardVertical"
        android:paddingLeft="@dimen/paddingForCardHorizontal"
        android:paddingRight="@dimen/paddingForCardHorizontal">

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/btn0"
            android:singleLine="true"
            android:textSize="@dimen/textSizeForCard" />
        <ImageButton
            android:id="@+id/btn0"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"

            android:src="@drawable/ic_check_24dp" />
        <Button
            android:id="@+id/btn1"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"

            android:text="@string/np" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"
            android:layout_toEndOf="@+id/btn1"
            android:text="@string/hv" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"
            android:layout_toEndOf="@+id/btn2"
            android:text="@string/zap" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"
            android:layout_toEndOf="@+id/btn3"
            android:text="@string/v" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"
            android:layout_toEndOf="@+id/btn4"
            android:text="@string/vidp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="@dimen/width_btn_in_card"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn0"
            android:layout_toEndOf="@+id/btn5"
            android:text="@string/ch" />


    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparator" />
</android.support.v7.widget.CardView>
